getMediaURLPrefixes returns immutable list by default